# hkt-tidb

./: .dockerignore  .env  .env.test  Dockerfile  README.md  check_schema.py  docker-compose.yml  entrypoint.py  main.py  mapping.generated.json  pyproject.toml  requirements.txt  suggested_mapping.example.json
artifacts/: last_run_air_quality_joined.json
